--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/uuid": "^9.0.7",
     "@uiw/react-markdown-preview": "^5.0.6",
     "axios": "^1.6.5",
+    "buffer": "^6.0.3",
     "file-icons-js": "^1.1.0",
     "i18next": "^23.7.13",
     "mermaid": "^10.6.1",
