--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-router-dom": "^6.21.1",
     "react-use": "^17.4.2",
     "rehype-rewrite": "^4.0.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "devgen-sdk": "0.4.6"
   },
   "description": "xcopilot",
   "devDependencies": {
