--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@uiw/react-markdown-preview": "^5.0.6",
     "axios": "^1.6.5",
     "buffer": "^6.0.3",
+    "devgen-sdk": "0.4.7",
     "file-icons-js": "^1.1.0",
     "i18next": "^23.7.13",
     "mermaid": "^10.6.1",
@@ -23,8 +24,8 @@
     "react-router-dom": "^6.21.1",
     "react-use": "^17.4.2",
     "rehype-rewrite": "^4.0.2",
-    "uuid": "^9.0.1",
-    "devgen-sdk": "0.4.7"
+    "typewriter-effect": "^2.21.0",
+    "uuid": "^9.0.1"
   },
   "description": "xcopilot",
   "devDependencies": {
