--- a/package.json
+++ b/package.json
@@ -1,55 +1,61 @@
 {
+  "name": "devgen-website",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "docusaurus": "docusaurus",
+    "start": "docusaurus start",
+    "build": "docusaurus build",
+    "swizzle": "docusaurus swizzle",
+    "deploy": "docusaurus deploy",
+    "clear": "docusaurus clear",
+    "serve": "docusaurus serve",
+    "write-translations": "docusaurus write-translations",
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "typecheck": "tsc",
+    "format": "prettier --write src"
+  },
   "dependencies": {
-    "@emotion/react": "latest",
-    "@emotion/styled": "latest",
-    "@mui/icons-material": "latest",
-    "@mui/joy": "latest",
-    "@mui/material": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "@types/uuid": "^9.0.7",
+    "@docusaurus/core": "3.5.2",
+    "@docusaurus/preset-classic": "3.5.2",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mdx-js/react": "^3.0.0",
+    "@mui/joy": "5.0.0-beta.48",
+    "clsx": "^2.0.0",
+    "prism-react-renderer": "^2.3.0",
     "@uiw/react-markdown-preview": "^5.0.6",
-    "axios": "^1.6.5",
-    "buffer": "^6.0.3",
-    "devgen-sdk": "0.4.7",
-    "file-icons-js": "^1.1.0",
-    "i18next": "^23.7.13",
-    "mermaid": "^10.6.1",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-i18next": "^14.0.0",
+    "@mui/icons-material": "latest",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "typewriter-effect": "^2.21.0",
     "react-icons": "^4.12.0",
     "react-markdown": "^9.0.1",
     "react-player": "^2.14.1",
     "react-router-dom": "^6.21.1",
     "react-use": "^17.4.2",
-    "rehype-rewrite": "^4.0.2",
-    "typewriter-effect": "^2.21.0",
-    "uuid": "^9.0.1"
+    "rehype-rewrite": "^4.0.2"
   },
-  "description": "xcopilot",
   "devDependencies": {
-    "prettier": "^2.8.1",
-    "react-scripts": "latest",
-    "shx": "^0.3.4",
-    "typescript": "^5.0.4"
-  },
-  "main": "src/index.tsx",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "format": "prettier --write src"
+    "@docusaurus/module-type-aliases": "3.5.2",
+    "@docusaurus/tsconfig": "3.5.2",
+    "@docusaurus/types": "3.5.2",
+    "typescript": "~5.5.2",
+    "prettier": "^2.8.1"
   },
   "browserslist": {
     "production": [
-      ">0.2%",
+      ">0.5%",
       "not dead",
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "last 3 chrome version",
+      "last 3 firefox version",
+      "last 5 safari version"
     ]
+  },
+  "engines": {
+    "node": ">=18.0"
   }
 }
