--- a/package.json
+++ b/package.json
@@ -21,27 +21,28 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mdx-js/react": "^3.0.0",
-    "@mui/joy": "5.0.0-beta.48",
-    "clsx": "^2.0.0",
-    "prism-react-renderer": "^2.3.0",
-    "@uiw/react-markdown-preview": "^5.0.6",
     "@mui/icons-material": "latest",
+    "@mui/joy": "5.0.0-beta.48",
+    "@uiw/react-markdown-preview": "^5.0.6",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.454.0",
+    "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "typewriter-effect": "^2.21.0",
     "react-icons": "^4.12.0",
     "react-markdown": "^9.0.1",
     "react-player": "^2.14.1",
     "react-router-dom": "^6.21.1",
     "react-use": "^17.4.2",
-    "rehype-rewrite": "^4.0.2"
+    "rehype-rewrite": "^4.0.2",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.5.2",
     "@docusaurus/tsconfig": "3.5.2",
     "@docusaurus/types": "3.5.2",
-    "typescript": "~5.5.2",
-    "prettier": "^2.8.1"
+    "prettier": "^2.8.1",
+    "typescript": "~5.5.2"
   },
   "browserslist": {
     "production": [
