--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,6 +34,8 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - uses: actions/setup-node@v4.0.2
+        with:
+          node-version: "18.x"
       - uses: CultureHQ/actions-yarn@v1.0.1
       - name: build page
         run: |
