--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,10 +36,10 @@ jobs:
       - uses: actions/setup-node@v4.0.2
         with:
           node-version: "18.x"
-      - uses: CultureHQ/actions-yarn@v1.0.1
+      - uses: pnpm/action-setup@v4
       - name: build page
         run: |
-          yarn install && yarn build
+          pnpm install && pnpm build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
