--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,6 +37,8 @@ jobs:
         with:
           node-version: "18.x"
       - uses: pnpm/action-setup@v4
+        with:
+          version: 'latest'
       - name: build page
         run: |
           pnpm install && pnpm build
